learn posterior-prob

--- a/regression_logistic.ipynb
+++ b/regression_logistic.ipynb
@@ -2,22 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: Cell magic `%%Latex` not found.\n"
-     ]
+     "data": {
+      "text/latex": [
+       "\n",
+       "$$\\frac{P(y=1)}{1-P(y=1)}$$\n",
+       "$$\\frac{P(y=1)}{1-P(y=1)}$$\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Latex object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "%%Latex\n",
+    "%%latex\n",
     "\n",
-    "$$frac{P(y=1)}{1-P(y=1)}$$\n",
-    "$$frac{P(y=1)}{1-P(y=1)}$$\n"
+    "$$\\frac{P(y=1)}{1-P(y=1)}$$\n",
+    "$$\\frac{P(y=1)}{1-P(y=1)}$$\n"
    ]
   },
   {
