learning more in statistic

--- a/logistc_reg_siraj.ipynb
+++ b/logistc_reg_siraj.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "ringkasan rian\n",
+    "logis. regr. use \n",
+    "1. logis. function atau sigmoid function menggunakan eular number, logistic func. digunakan untuk memetakan input data kedalam binary [0,1]\n",
+    "2. optimisasi paramater input dengan maximum likelihood estimation.  dihitung menggunakan newton method\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Newton's Method for Logistic Regression - The Math of Intelligence (Week 2)\n",
     "\n",
     "\n",
@@ -77,10 +88,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -109,10 +118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#outputs probability between 0 and 1, used to help define our logistic regression curve\n",
@@ -130,10 +137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#makes the random numbers predictable\n",
@@ -144,7 +149,17 @@
     "#good for reproducing results for debugging\n",
     "\n",
     "\n",
-    "np.random.seed(0) # set the seed\n",
+    "np.random.seed(0) # set the seed\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "\n",
     "##Step 1 - Define model parameters (hyperparameters)\n",
     "\n",
@@ -177,7 +192,6 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -1003,9 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "@catch_singularity\n",
@@ -1079,7 +1091,6 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -1149,9 +1160,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
