--- a/notebooks/5. Distributions.ipynb
+++ b/notebooks/5. Distributions.ipynb
@@ -12,11 +12,15 @@
     "\n",
     "**Types**\n",
     "\n",
-    "1. Discrete Random Variables <br>\n",
-    "    Eg: Genders of the buyers buying shoe\n",
-    "2. Continuous Random Variables <br>\n",
-    "    Eg: Shoe Sales in a quarter\n",
-    "    \n",
+    "1. Discrete Random Variables <br>  Eg: Genders of the buyers buying shoe\n",
+    "2. Continuous Random Variables <br>   Eg: Shoe Sales in a quarter\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Probability Distribution\n",
     "> Assigns a probability to each measurable subset of the possible outcomes of a random experiment, survey, or procedure of statistical inference. [wiki](https://en.wikipedia.org/wiki/Probability_distribution)\n",
     "\n",
@@ -30,161 +34,102 @@
     "function that describes the relative likelihood for this random variable to take on a given value\n",
     "\n",
     "#### Continuous probability distribution(Cumulative Density function)\n",
-    "probability that the variable takes a value less than or equal to `x`\n",
-    "\n",
+    "probability that the variable takes a value less than or equal to `x`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Central Limit Theorem\n",
     "Given certain conditions, the arithmetic mean of a sufficiently large number of iterates of independent random variables, each with a well-defined expected value and well-defined variance, will be approximately normally distributed, regardless of the underlying distribution. [wiki](https://en.wikipedia.org/wiki/Central_limit_theorem)\n",
     "\n",
     "#### Normal Distribution\n",
     "A bell shaped distribution. It is also called Gaussian distribution\n",
-    "\n",
-    "<img style=\"float: left;\" src=\"img/normaldist.png\" height=\"220\" width=\"220\">\n",
     "<br>\n",
+    "$ \n",
+    "\\\\ P(x) = \\frac{1}{{\\sigma \\sqrt {2\\pi } } } \n",
+    "    e^{         \n",
+    "            - \\frac{\\left( {x - \\mu } \\right)^2} {2\\sigma ^2 }  \n",
+    "    }    \n",
+    "$\n",
+    "<br>$\\mu$  is the mean or expectation of the distribution (and also its median and mode)\n",
+    "<br>$\\sigma$  is the standard deviation, and\n",
+    "<br>$\\sigma^{2}$ is the variance.\n",
     "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "\n",
-    "\n",
-    "\n",
     "**PDF**\n",
-    "<br>\n",
-    "<br>\n",
+    "<br> \n",
     "<img style=\"float: left;\" src=\"img/normal_pdf.png\" height=\"320\" width=\"320\">\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "\n",
+    "<br> <br> <br> <br> <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**CDF**\n",
     "<br>\n",
-    "<br>\n",
-    "\n",
-    "\n",
     "<img style=\"float: left;\" src=\"img/normal_cdf.png\" height=\"320\" width=\"320\">\n",
-    "\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "\n",
+    "<br> <br> <br> <br> <br> <br> <br> <br> <br> <br>\n",
     "\n",
     "#### Skewness\n",
     "Measure of the asymmetry of the probability distribution of a real-valued random variable about its mean. [wiki](https://en.wikipedia.org/wiki/Skewness)\n",
     "\n",
-    "<img style=\"float: left;\" src=\"img/skewness.png\" height=\"620\" width=\"620\">\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
+    "<img style=\"float: left;\" src=\"img/skewness.png\" height=\"620\" width=\"620\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Kurtosis\n",
     "Measure of the \"peakedness\" of the probability distribution of a real-valued random variable [wiki](https://en.wikipedia.org/wiki/Kurtosis)\n",
-    "<br>\n",
-    "<br>\n",
-    "<img style=\"float: left;\" src=\"img/kurtosis.png\" height=\"420\" width=\"420\">\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "\n",
+    "<br> \n",
+    "<img style=\"float: left;\" src=\"img/kurtosis.png\" height=\"420\" width=\"420\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Binomial Distribution\n",
     "\n",
     "Binomial distribution with parameters `n` and `p` is the discrete probability distribution of the number of successes in a sequence of n independent yes/no experiments, each of which yields success with probability p. A success/failure experiment is also called a Bernoulli experiment or Bernoulli trial; when n = 1, the binomial distribution is a Bernoulli distribution  [wiki](https://en.wikipedia.org/wiki/Binomial_distribution)\n",
+    "<br> <br>\n",
+    "$ f(k;n,p) = Pr(X = k) = \\dbinom{n}{k} p^k(1-p)^{n-k} $\n",
+    "<br> \n",
+    "where\n",
     "<br>\n",
-    "<br>\n",
-    "<img style=\"float: left;\" src=\"img/binomial_pmf.png\" height=\"420\" width=\"420\">\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "\n",
-    "\n",
+    "$\\tbinom{n}{k}$ is the number of combinations of $n$ that are taken k at a time, and is defined by $ \\[ \\dbinom{n}{k} = \\frac 1 {n!}{k!(n-k)!} \\] $\n",
+    "Alternative notations include $C(n,k)$,  $C^n_k$,\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Exponential Distribution\n",
     "Probability distribution that describes the time between events in a Poisson process, i.e. a process in which events occur continuously and independently at a constant average rate. It has the key property of being memoryless. [wiki](https://en.wikipedia.org/wiki/Exponential_distribution)\n",
-    "<br>\n",
-    "<br>\n",
-    "<img style=\"float: left;\" src=\"img/exponential_pdf.png\" height=\"420\" width=\"420\">\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "\n",
+    "<br> <br>\n",
+    "<img style=\"float: left;\" src=\"img/exponential_pdf.png\" height=\"420\" width=\"420\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Uniform distribution\n",
     "All values have the same frequency [wiki](https://en.wikipedia.org/wiki/Uniform_distribution_(continuous))\n",
-    "\n",
-    "\n",
-    "<br> \n",
-    "<br>\n",
+    "<br> <br>\n",
     "<img style=\"float: left;\" src=\"img/uniform.png\" height=\"420\" width=\"420\">\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "\n",
-    "\n",
-    "\n",
+    "<br> <br> <br>\n",
+    "<br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>\n",
+    "<br> <br> <br> <br>\n",
     "\n",
     "### 6-sigma philosophy\n",
     "<img style=\"float: left;\" src=\"img/6sigma.png\" height=\"520\" width=\"520\">"
@@ -195,18 +140,13 @@
    "metadata": {},
    "source": [
     "### Histograms\n",
-    "\n",
-    "Most commonly used representation of a distribution.\n",
-    "\n",
-    "Let's plot distribution of weed prices for 2014"
+    "Most commonly used representation of a distribution. Let's plot distribution of weed prices for 2014"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -230,9 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -262,9 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "weed_pd[\"month\"] = weed_pd[\"date\"].apply(lambda x: x.month)\n",
@@ -274,9 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "weed_jan2015_summarized = weed_pd.loc[(weed_pd.month==1) & (weed_pd.year==2015), [\"State\", \"HighQ\"]].groupby(\"State\").mean().reset_index()"
@@ -285,9 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -635,9 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -694,9 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -728,9 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -760,9 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -783,9 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -817,9 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -856,9 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -980,9 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1001,9 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1027,9 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def squared_error(bootstrap_sample, actual_mean):\n",
@@ -1045,9 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1068,23 +978,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
