--- a/notebooks/4. Basic Metrics.ipynb
+++ b/notebooks/4. Basic Metrics.ipynb
@@ -17,10 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -42,10 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "prices_pd = pd.read_csv(\"../data/Weed_Price.csv\", parse_dates=[-1])\n",
@@ -56,9 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -159,9 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -262,14 +254,25 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -378,9 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -445,9 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -482,9 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "prices_pd.sort(columns=['State', 'date'], inplace=True)\n",
@@ -509,15 +506,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -534,74 +542,74 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>20098</th>\n",
+       "      <th>4</th>\n",
        "      <td>California</td>\n",
-       "      <td>248.77</td>\n",
-       "      <td>12021</td>\n",
-       "      <td>193.44</td>\n",
-       "      <td>12724</td>\n",
-       "      <td>193.88</td>\n",
-       "      <td>770</td>\n",
-       "      <td>2013-12-27</td>\n",
+       "      <td>248.78</td>\n",
+       "      <td>12096</td>\n",
+       "      <td>193.56</td>\n",
+       "      <td>12812</td>\n",
+       "      <td>192.92</td>\n",
+       "      <td>778</td>\n",
+       "      <td>2014-01-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20863</th>\n",
+       "      <th>55</th>\n",
        "      <td>California</td>\n",
-       "      <td>248.74</td>\n",
-       "      <td>12025</td>\n",
-       "      <td>193.44</td>\n",
-       "      <td>12728</td>\n",
-       "      <td>193.88</td>\n",
-       "      <td>770</td>\n",
-       "      <td>2013-12-28</td>\n",
+       "      <td>243.96</td>\n",
+       "      <td>16512</td>\n",
+       "      <td>189.35</td>\n",
+       "      <td>19151</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1096</td>\n",
+       "      <td>2015-01-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21577</th>\n",
+       "      <th>106</th>\n",
        "      <td>California</td>\n",
-       "      <td>248.76</td>\n",
-       "      <td>12047</td>\n",
-       "      <td>193.55</td>\n",
-       "      <td>12760</td>\n",
-       "      <td>193.60</td>\n",
-       "      <td>772</td>\n",
-       "      <td>2013-12-29</td>\n",
+       "      <td>248.20</td>\n",
+       "      <td>12571</td>\n",
+       "      <td>192.80</td>\n",
+       "      <td>13406</td>\n",
+       "      <td>191.94</td>\n",
+       "      <td>804</td>\n",
+       "      <td>2014-02-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22291</th>\n",
+       "      <th>157</th>\n",
        "      <td>California</td>\n",
-       "      <td>248.82</td>\n",
-       "      <td>12065</td>\n",
-       "      <td>193.54</td>\n",
-       "      <td>12779</td>\n",
-       "      <td>193.80</td>\n",
-       "      <td>773</td>\n",
-       "      <td>2013-12-30</td>\n",
+       "      <td>243.30</td>\n",
+       "      <td>16904</td>\n",
+       "      <td>188.95</td>\n",
+       "      <td>19764</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1123</td>\n",
+       "      <td>2015-02-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22801</th>\n",
+       "      <th>208</th>\n",
        "      <td>California</td>\n",
-       "      <td>248.76</td>\n",
-       "      <td>12082</td>\n",
-       "      <td>193.54</td>\n",
-       "      <td>12792</td>\n",
-       "      <td>193.80</td>\n",
-       "      <td>773</td>\n",
-       "      <td>2013-12-31</td>\n",
+       "      <td>247.60</td>\n",
+       "      <td>12988</td>\n",
+       "      <td>192.97</td>\n",
+       "      <td>13906</td>\n",
+       "      <td>191.40</td>\n",
+       "      <td>839</td>\n",
+       "      <td>2014-03-01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            State   HighQ  HighQN    MedQ  MedQN    LowQ  LowQN       date\n",
-       "20098  California  248.77   12021  193.44  12724  193.88    770 2013-12-27\n",
-       "20863  California  248.74   12025  193.44  12728  193.88    770 2013-12-28\n",
-       "21577  California  248.76   12047  193.55  12760  193.60    772 2013-12-29\n",
-       "22291  California  248.82   12065  193.54  12779  193.80    773 2013-12-30\n",
-       "22801  California  248.76   12082  193.54  12792  193.80    773 2013-12-31"
+       "          State   HighQ  HighQN    MedQ  MedQN    LowQ  LowQN       date\n",
+       "4    California  248.78   12096  193.56  12812  192.92    778 2014-01-01\n",
+       "55   California  243.96   16512  189.35  19151     NaN   1096 2015-01-01\n",
+       "106  California  248.20   12571  192.80  13406  191.94    804 2014-02-01\n",
+       "157  California  243.30   16904  188.95  19764     NaN   1123 2015-02-01\n",
+       "208  California  247.60   12988  192.97  13906  191.40    839 2014-03-01"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,10 +621,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "ca_sum = california_pd['HighQ'].sum()"
@@ -624,10 +630,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "ca_count = california_pd['HighQ'].count()"
@@ -635,22 +639,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean weed price in CA is: 245.376124722\n"
+      "Mean weed price in CA is: 245.37612472160356\n"
      ]
     }
    ],
    "source": [
     "ca_mean = ca_sum / ca_count\n",
-    "print \"Mean weed price in CA is:\", ca_mean"
+    "print(\"Mean weed price in CA is:\", ca_mean)"
    ]
   },
   {
@@ -664,12 +666,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2014"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "california_pd.iloc[0]['date'].year\n",
+    "california_pd.iloc[1]['date'].year"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -683,9 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -714,9 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ca_highq_pd = california_pd.sort(columns=['HighQ'])\n",
@@ -726,9 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -755,9 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -788,9 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "california_pd['HighQ_dev'] = (california_pd['HighQ'] - ca_mean) ** 2"
@@ -799,9 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -828,9 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -855,9 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -995,9 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1037,9 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1141,9 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ny_pd = ny_pd.ix[:,[1,7]]\n",
@@ -1153,9 +1145,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1220,9 +1210,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1295,9 +1283,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1318,9 +1304,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1398,9 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1484,9 +1466,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1511,9 +1491,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1592,16 +1570,13 @@
     "<br>\n",
     "<br>\n",
     "<br>\n",
-    "\n",
-    "#### Finding correlation between weed prices in New York and California"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1612,6 +1587,7 @@
     }
    ],
    "source": [
+    "#### Finding correlation between weed prices in New York and California\n",
     "ca_highq_std = ca_ny_pd.CA_HighQ.std()\n",
     "ny_highq_std = ca_ny_pd.NY_HighQ.std()\n",
     "\n",
@@ -1622,9 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1705,23 +1679,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
