--- a/scratch_logistic_regression.ipynb
+++ b/scratch_logistic_regression.ipynb
@@ -54,11 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# contoh hyperparameter\n",
     "class LogisticRegression:\n",
+    "#     lr : learning rate\n",
     "    def __init__(self, lr=0.01, num_iter=100000, fit_intercept=True, verbose=False):\n",
     "        self.lr = lr\n",
     "        self.num_iter = num_iter\n",
@@ -81,16 +83,20 @@
     "        if self.fit_intercept:\n",
     "            X = self.__add_intercept(X)\n",
     "        \n",
-    "        # weights initialization\n",
+    "# weights initialization\n",
     "#         np.zeros : create matrix-0 1D which its width by argument\n",
     "        X_width = X.shape[1]\n",
     "        self.theta = np.zeros(X_width)\n",
-    "\n",
+    "# berapa kali iterasi\n",
     "        for i in range(self.num_iter):\n",
     "#           np.dot : mengalikan matrix yg dimasukkan, returnnya matrix juga\n",
     "            z = np.dot(X, self.theta)\n",
     "            h = self.__sigmoid(z)\n",
-    "#X.T itu ndarray X di transpose         \n",
+    "\t\t\t# derivative function, mengubah fungsi f jadi f' lalu jarak x0 x1 jadi lebih pendek         \n",
+    "        \t# (-y * np.log(h) - (1 - y) * np.log(1 - h)).mean()\n",
+    "\t\t\t# gradient descent itu derivative dari loss function\n",
+    "        \t#X.T itu ndarray X di transpose         \n",
+    "#           h itu logistic function   \n",
     "            gradient = np.dot(X.T, (h - y)) / y.size\n",
     "            self.theta -= self.lr * gradient\n",
     "            \n",
